# ruway-software.github.io

./: .gitignore  Makefile  README.md  about.html  about.md  archive.html  index.html  package-lock.json  package.json  ruway-software.cabal  site.hs  stack.yaml  tailwind.config.js
css/: default.css
posts/: 2021-10-02-hola-mundo.html  2021-10-02-hola-mundo.markdown  2021-10-02-sobre-nombre.html
templates/: archive.html  default.html  post.html
