name:                ruway-software
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ruway-software/ruway-software.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Gomez
maintainer:          ruway.software@gmail.com
copyright:           2021 Ruway Software
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
